update: rounded-full

--- a/src/components/UI/Button.astro
+++ b/src/components/UI/Button.astro
@@ -52,7 +52,7 @@ const sizeClasses = {
   lg: 'px-6 py-3 text-lg',
 };
 
-const roundedClass = rounded ? 'rounded-lg' : '';
+const roundedClass = rounded ? 'rounded-full' : '';
 const buttonClasses = `${baseStyles} ${colorClasses[variant][color]} ${sizeClasses[size]} ${roundedClass}`;
 ---
 
