--- a/src/components/UI/Tag.astro
+++ b/src/components/UI/Tag.astro
@@ -19,10 +19,10 @@ const { tags } = Astro.props;
 <style>
   @reference "@/styles/global.css";
   .tags_container {
-    @apply flex justify-end mt-[2rem] gap-2 flex-wrap;
+    @apply flex justify-end gap-2 m-[0.25rem] flex-wrap;
   }
   .tags {
-    @apply text-sm border-[1.5px] border-[var(--color-text-primary)] rounded-[6px] p-[0.2rem];
+    @apply text-sm border-[1.5px] border-[var(--color-text-primary)] rounded-[0.5rem] p-[0.2rem];
   }
 
   .tags:hover {
@@ -31,7 +31,7 @@ const { tags } = Astro.props;
 
   @media (min-width: 900px) {
     .tags_container {
-      @apply max-w-[60rem] mx-auto;
+      @apply mx-auto;
     }
   }
 </style>
