add: content/projects

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -15,6 +15,6 @@ import AsySplitGrid from '@/components/grids/AsySplitGrid.astro';
   </div>
   <!-- Portfolio Section -->
    
-  <AsySplitGrid />
+  <!-- <AsySplitGrid /> -->
 
 </Layout>
