note: Header temporarily removed

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,12 +24,12 @@ const { title, description, image, url, keywords } = Astro.props;
     url={url}
     keywords={keywords}
   />
-  <Header />
+  <!-- <Header /> -->
   <body>
 
     <slot />
     <main class="min-h-[30vh]"></main>
-    <Footer />
+    <!-- <Footer /> -->
     
   </body>
 </html>
