--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { title, description, image, url, keywords } = Astro.props;
 
     <slot />
     <main class="min-h-[30vh]"></main>
-    <!-- <Footer /> -->
+    <Footer />
     
   </body>
 </html>
