note: NavBar temporarily removed from Header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, description, image, url, keywords } = Astro.props;
     url={url}
     keywords={keywords}
   />
-  <!-- <Header /> -->
+  <Header />
   <body>
 
     <slot />
