--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -150,7 +150,7 @@ const baseUrl = import.meta.env.BASE_URL;
               </a>
               <span class="tooltip">"Nice to meet you!"</span>
           </div>
-          <NavBar baseUrl={baseUrl}/>
+          <!-- <NavBar baseUrl={baseUrl}/> -->
           <div class="relative items-center group">
             <button
               id="mode-button"
