note: removed sitemap temtemporarily

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -45,11 +45,11 @@ const year = new Date().getFullYear();
 
     <hr />
     <!-- Resources -->
-    <div class="resource">
+    <!-- <div class="resource">
       <ul class="sitemap">
         <li><a href=`${baseUrl}sitemap`>Site Map</a></li>
       </ul>
-    </div>
+    </div> -->
 
     <!-- Copyright -->
     <div class="footer_copyright">
