--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -195,7 +195,7 @@ const baseUrl = import.meta.env.BASE_URL;
   }
 
   .scroll-bar {
-    @apply block text-center mt-[1.5rem] py-[0.5rem] bg-[var(--color-caption-primary)] text-[var(--color-caption-secondary)];
+    @apply block text-center mt-[1.5rem] py-[0.5rem] bg-[var(--color-caption-primary)] text-[var(--color-caption-secondary)] z-[98];
   }
 
   .scroll-bar p {
