update: hover in light and dark mode

--- a/src/components/content/ProjectThumbnail.astro
+++ b/src/components/content/ProjectThumbnail.astro
@@ -35,7 +35,23 @@ const { project, imageBase } = Astro.props;
     @apply w-full max-w-full;   
   }
 
-  .glassHover{
+  /* .glassHover{
+    @apply absolute inset-0 flex flex-col items-center justify-center
+    bg-gradient-to-t from-white/20 via-white/10 to-white/5
+    backdrop-blur-md border border-white/25
+    rounded-xl opacity-0 transition-opacity duration-300 group-hover:opacity-100;
+  } */
+
+
+  body.light_mode .glassHover {
+    @apply absolute inset-0 flex flex-col items-center justify-center
+    bg-gradient-to-t from-black/5 via-black/2 to-transparent
+    border border-black/10 backdrop-blur-md
+    rounded-xl opacity-0 transition-opacity duration-300 group-hover:opacity-100;
+  }
+
+
+  body.dark_mode .glassHover {
     @apply absolute inset-0 flex flex-col items-center justify-center
     bg-gradient-to-t from-white/20 via-white/10 to-white/5
     backdrop-blur-md border border-white/25
