--- a/src/components/grids/ProjectCard.astro
+++ b/src/components/grids/ProjectCard.astro
@@ -7,10 +7,13 @@ interface Props{
 }
 
 const { projectMeta } = Astro.props as Props;
+
+const baseUrl = import.meta.env.BASE_URL ?? '/';
+const href = `${baseUrl}projects/${projectMeta.slug}`;
 ---
 
 <div class="project_card group">
-  <a href={projectMeta.href} class="block">
+  <a href={href} class="block">
     <div class="square_item relative overflow-hidden">
       <img src={projectMeta.image} alt={projectMeta.title} class="img-default" />
       <img src={projectMeta.hoverImage} alt={projectMeta.title + ' hover'} class="img-hover" />
