--- a/src/components/grids/ProjectCardText.astro
+++ b/src/components/grids/ProjectCardText.astro
@@ -7,11 +7,15 @@ interface Props{
 }
 
 const { projectMeta } = Astro.props as Props;
+
+const baseUrl = import.meta.env.BASE_URL ?? '/';
+const href = `${baseUrl}projects/${projectMeta.slug}`;
+
 ---
 
 <div class="project_card group relative">
-  <a href={projectMeta.href} class="block relative w-full h-full">
-    <div class="square_item relative overflow-hidden ">
+  <a href={href} class="relative">
+    <div class="square_item relative overflow-hidden">
       <img src={projectMeta.image} alt={projectMeta.title} class="img-default" />
       <img src={projectMeta.hoverImage} alt={projectMeta.title + ' hover'} class="img-hover" />
       <!-- <picture class="hoverImage">
