--- a/src/components/grids/Square.astro
+++ b/src/components/grids/Square.astro
@@ -6,7 +6,7 @@ import Button from '@/components/UI/Button.astro';
 const projects = await getCollection('projects');
 const baseUrl = import.meta.env.BASE_URL;
 projects.sort((a, b) => a.data.order - b.data.order);
-
+// console.log('href', project.data.slug);
 ---
 
 <div class="gridLayout">
@@ -15,13 +15,8 @@ projects.sort((a, b) => a.data.order - b.data.order);
       projects.slice(0, 3).map((project) => (
         <ProjectCard
           projectMeta={{
-            title: project.data.title,
-            image: project.data.image,
-            hoverImage: project.data.hoverImage,
-            href: `${baseUrl}projects/${project.slug}`,
-            info: project.data.info,
-            description: project.data.description,
-            tags: project.data.tags,
+            ...project.data,
+            slug: project.slug,
           }}
         />
       ))
